# voxpipe

./: .env.example  .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
src/tests/: test_asr.py  test_asr_tts_loop.py  test_context_pruning.py  test_llm_error.py  test_llm_integration.py  test_tts.py
src/tests/infra/: test_audio.py  test_context.py  test_hotkey.py  test_registry.py  test_utils.py
src/tests/llm/: test_chaining.py  test_context_handler.py  test_conversation.py  test_decoders.py  test_providers.py  test_session.py  test_session_manager.py  test_state.py  test_tools.py
src/tests/pipeline/: test_callback.py  test_events.py  test_gate.py  test_integration.py  test_splitter.py
src/tests/storage/: test_memory.py  test_memory_benchmark.py  test_memory_store.py  test_protocols.py  test_record.py
src/voxpipe/: __init__.py  __main__.py
src/voxpipe/asr/: __init__.py  __main__.py  model.py
src/voxpipe/asr/models/: __init__.py  base.py  gates.py  parakeetv2.py
src/voxpipe/core/: __init__.py  config.py  downloader.py  engine.py  exceptions.py  models.py  utils.py
src/voxpipe/data/: config.defaults.yaml  manifest.yaml
src/voxpipe/llm/: __init__.py  __main__.py  context.py  conversation.py  decoders.py  download.py  model.py  session.py  session_manager.py  state.py  tools.py
src/voxpipe/pipeline/: events.py  gate.py  hotkeys.py  pipeline.py
src/voxpipe/storage/: __init__.py  base.py  manager.py  memory.py  protocols.py  ram.py  record.py  retriever.py  sqlite.py
src/voxpipe/streaming/: splitter.py
src/voxpipe/tts/: __init__.py  __main__.py  audio.py  download.py  model.py
